@@ -1,3 +1,12 @@
+2015-03-30  Gary Benson <gbenson@redhat.com>
+
+	* remote.c (remote_mourn_1): Remove function.  Update all callers
+	to use remote_mourn.
+	(extended_remote_mourn_1): Remove function.  Update all callers
+	to use extended_remote_mourn.
+	(extended_remote_attach_1): Remove function.  Update all callers
+	to use extended_remote_attach.
+
 2015-03-28  James Bowman  <james.bowman@ftdichip.com>
 
 	* Makefile.in (ALL_TARGET_OBS): Add ft32-tdep.o.
